// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`demo demo-bus-code: DemoCode-bus-code-case1.tsx 1`] = `
"\\"use strict\\";

function _typeof(obj) { \\"@babel/helpers - typeof\\"; if (typeof Symbol === \\"function\\" && typeof Symbol.iterator === \\"symbol\\") { _typeof = function _typeof(obj) { return typeof obj; }; } else { _typeof = function _typeof(obj) { return obj && typeof Symbol === \\"function\\" && obj.constructor === Symbol && obj !== Symbol.prototype ? \\"symbol\\" : typeof obj; }; } return _typeof(obj); }

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports[\\"default\\"] = exports.SearchHeader = exports.RecommendHeader = exports.TodoHeader = void 0;

var _react = _interopRequireDefault(require(\\"<rootDir>/__tests__/lib/bus-code/react.js\\"));

var _react2 = _interopRequireWildcard(require(\\"react\\"));

var _classnames = _interopRequireDefault(require(\\"classnames\\"));

var _auxo = require(\\"@ecom/auxo\\");

var _douXiaoer = require(\\"@ecom/hulk-utils/src/dou-xiaoer\\");

var _store = require(\\"@ecom/hulk-utils/src/store\\");

var _tea = require(\\"@ecom/hulk-utils/src/tea\\");

var _YStore = require(\\"@ecom/mortise/YStore\\");

var _icon = require(\\"../../../static/icon\\");

var _store2 = _interopRequireDefault(require(\\"../../../store\\"));

var _accurate = require(\\"../../../type/accurate\\");

var _utils = require(\\"../../../utils\\");

var _useTheme = require(\\"../../../utils/hooks/useTheme\\");

var _imgs = require(\\"../../../utils/imgs\\");

var _webp = require(\\"../../../utils/webp\\");

var _index = _interopRequireDefault(require(\\"./index.scss\\"));

function _getRequireWildcardCache() { if (typeof WeakMap !== \\"function\\") return null; var cache = new WeakMap(); _getRequireWildcardCache = function _getRequireWildcardCache() { return cache; }; return cache; }

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } if (obj === null || _typeof(obj) !== \\"object\\" && typeof obj !== \\"function\\") { return { \\"default\\": obj }; } var cache = _getRequireWildcardCache(); if (cache && cache.has(obj)) { return cache.get(obj); } var newObj = {}; var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor; for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null; if (desc && (desc.get || desc.set)) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } newObj[\\"default\\"] = obj; if (cache) { cache.set(obj, newObj); } return newObj; }

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { \\"default\\": obj }; }

function _extends() { _extends = Object.assign || function (target) { for (var i = 1; i < arguments.length; i++) { var source = arguments[i]; for (var key in source) { if (Object.prototype.hasOwnProperty.call(source, key)) { target[key] = source[key]; } } } return target; }; return _extends.apply(this, arguments); }

function _objectWithoutProperties(source, excluded) { if (source == null) return {}; var target = _objectWithoutPropertiesLoose(source, excluded); var key, i; if (Object.getOwnPropertySymbols) { var sourceSymbolKeys = Object.getOwnPropertySymbols(source); for (i = 0; i < sourceSymbolKeys.length; i++) { key = sourceSymbolKeys[i]; if (excluded.indexOf(key) >= 0) continue; if (!Object.prototype.propertyIsEnumerable.call(source, key)) continue; target[key] = source[key]; } } return target; }

function _objectWithoutPropertiesLoose(source, excluded) { if (source == null) return {}; var target = {}; var sourceKeys = Object.keys(source); var key, i; for (i = 0; i < sourceKeys.length; i++) { key = sourceKeys[i]; if (excluded.indexOf(key) >= 0) continue; target[key] = source[key]; } return target; }

function _defineProperty(obj, key, value) { if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }

var TodoHeader = (0, _react[\\"default\\"])({
  \\"location\\": {
    \\"start\\": {
      \\"line\\": 26,
      \\"column\\": 26
    },
    \\"end\\": {
      \\"line\\": 67,
      \\"column\\": 1
    }
  },
  \\"filename\\": \\"<rootDir>/__tests__/lib/bus-code/input/case1.tsx\\"
})(function (_ref) {
  var className = _ref.className,
      todoLength = _ref.todoLength,
      normalImg = _ref.normalImg;

  var _useContextStore = (0, _YStore.useContextStore)(_store2[\\"default\\"]),
      action = _useContextStore.action;

  return /*#__PURE__*/_react2[\\"default\\"].createElement(\\"div\\", {
    className: (0, _classnames[\\"default\\"])(_index[\\"default\\"].todoHeader, className)
  }, /*#__PURE__*/_react2[\\"default\\"].createElement(\\"div\\", {
    className: _index[\\"default\\"].todo
  }, /*#__PURE__*/_react2[\\"default\\"].createElement(\\"div\\", {
    className: _index[\\"default\\"].infoWrapper
  }, /*#__PURE__*/_react2[\\"default\\"].createElement(_auxo.ImgDefault, {
    imgSrc: normalImg ? normalImg : _imgs.HEADER_IMG.HIGHEST_P,
    defaultSvg: _imgs.HEADER_IMG.LOWEST_P,
    mask: false,
    className: _index[\\"default\\"].infoImg,
    draggable: 'false'
  }), Boolean(todoLength) ? /*#__PURE__*/_react2[\\"default\\"].createElement(\\"div\\", {
    className: _index[\\"default\\"].info
  }, /*#__PURE__*/_react2[\\"default\\"].createElement(\\"div\\", {
    className: _index[\\"default\\"].title
  }, \\"\\\\u6709 \\", todoLength, \\" \\\\u4E2A\\\\u4E8B\\\\u9879\\\\u6B63\\\\u5728\\\\u5F71\\\\u54CD\\\\u60A8\\\\u7684\\\\u6536\\\\u76CA\\"), /*#__PURE__*/_react2[\\"default\\"].createElement(\\"div\\", {
    className: _index[\\"default\\"].subTitle
  }, \\"\\\\u8BF7\\\\u53CA\\\\u65F6\\\\u5173\\\\u6CE8\\\\uFF0C\\\\u6309\\\\u6307\\\\u5BFC\\\\u5B8C\\\\u6210\\\\u64CD\\\\u4F5C\\")) : /*#__PURE__*/_react2[\\"default\\"].createElement(\\"div\\", {
    className: _index[\\"default\\"].nonTaskInfo
  }, \\"\\\\u5F88\\\\u68D2\\\\uFF5E\\\\u5F53\\\\u524D\\\\u6CA1\\\\u6709\\\\u9700\\\\u8981\\\\u5904\\\\u7406\\\\u7684\\\\u4EFB\\\\u52A1\\")), /*#__PURE__*/_react2[\\"default\\"].createElement(\\"div\\", {
    className: _index[\\"default\\"].miniIcon,
    onClick: function onClick() {
      var _getGlobalStore$getDa, _getGlobalStore, _getGlobalStore$getDa2, _getGlobalStore$getDa3;

      if ((_getGlobalStore$getDa = (_getGlobalStore = (0, _store.getGlobalStore)()).getData) !== null && _getGlobalStore$getDa !== void 0 && (_getGlobalStore$getDa2 = _getGlobalStore$getDa.call(_getGlobalStore)) !== null && _getGlobalStore$getDa2 !== void 0 && (_getGlobalStore$getDa3 = _getGlobalStore$getDa2.DouXiaoerStore) !== null && _getGlobalStore$getDa3 !== void 0 && _getGlobalStore$getDa3.isOnceInject) {
        // 如果页面中存在嵌入式，需要直接隐藏
        (0, _douXiaoer.setGlobalHide)(true);
      }

      action.sendChangeToMini();
      action.setDouXiaoerStatus(_douXiaoer.DouXiaoerStatusEnum.mini);
    }
  }, /*#__PURE__*/_react2[\\"default\\"].createElement(_icon.UnionIcon, null))));
});
exports.TodoHeader = TodoHeader;
var RecommendHeader = (0, _react[\\"default\\"])({
  \\"location\\": {
    \\"start\\": {
      \\"line\\": 74,
      \\"column\\": 31
    },
    \\"end\\": {
      \\"line\\": 121,
      \\"column\\": 1
    }
  },
  \\"filename\\": \\"<rootDir>/__tests__/lib/bus-code/input/case1.tsx\\"
})(function (_ref2) {
  var className = _ref2.className,
      normalImg = _ref2.normalImg,
      normalBg = _ref2.normalBg,
      type = _ref2.type;

  var _useContextStore2 = (0, _YStore.useContextStore)(_store2[\\"default\\"]),
      state = _useContextStore2.state,
      action = _useContextStore2.action;

  var _state$content = state.content,
      content = _state$content === void 0 ? {} : _state$content,
      themeInfo = state.themeInfo;
  var _content$head_info = content.head_info,
      head_info = _content$head_info === void 0 ? {} : _content$head_info;

  var _useRecommendTheme = (0, _useTheme.useRecommendTheme)(),
      theme = _useRecommendTheme.theme;

  return /*#__PURE__*/_react2[\\"default\\"].createElement(\\"div\\", {
    className: (0, _classnames[\\"default\\"])(_index[\\"default\\"].recommendHeader, className, _defineProperty({}, _index[\\"default\\"].recommendInSearch, type === _accurate.AccurateHeaderType.搜索)) // style={{ backgroundImage: \`url(\${normalBg ? normalBg : HEADER_IMG.HEADER_BG})\` }}>
    ,
    style: {
      backgroundImage: \\"url(\\".concat(normalBg ? normalBg : theme.img_header, \\")\\")
    }
  }, /*#__PURE__*/_react2[\\"default\\"].createElement(\\"div\\", {
    className: _index[\\"default\\"].recommend
  }), /*#__PURE__*/_react2[\\"default\\"].createElement(\\"div\\", {
    className: _index[\\"default\\"].recommend
  }, /*#__PURE__*/_react2[\\"default\\"].createElement(\\"div\\", {
    className: _index[\\"default\\"].recommendContent
  }, /*#__PURE__*/_react2[\\"default\\"].createElement(_auxo.ImgDefault, {
    imgSrc: normalImg ? normalImg : (0, _webp.isSupportedWebp)() ? theme.src : theme.defaultSrc,
    defaultSvg: theme.defaultSrc,
    mask: false,
    className: _index[\\"default\\"].nicon,
    draggable: \\"false\\"
  }), /*#__PURE__*/_react2[\\"default\\"].createElement(\\"div\\", {
    className: _index[\\"default\\"].headerTitle
  }, /*#__PURE__*/_react2[\\"default\\"].createElement(\\"div\\", {
    className: _index[\\"default\\"].title
  }, head_info === null || head_info === void 0 ? void 0 : head_info.title))), /*#__PURE__*/_react2[\\"default\\"].createElement(\\"div\\", {
    className: _index[\\"default\\"].union,
    onClick: function onClick() {
      (0, _tea.sendEvent)(_utils.DouxiaoerClickEvent, {
        scene_id: state.scene_id,
        status: state.status,
        name: '缩小按钮'
      });
      action.setDouXiaoerStatus(_douXiaoer.DouXiaoerStatusEnum.mini);
      action.sendChangeToMini();
    }
  }, /*#__PURE__*/_react2[\\"default\\"].createElement(_icon.UnionIcon, null))));
});
exports.RecommendHeader = RecommendHeader;
var SearchHeader = (0, _react[\\"default\\"])({
  \\"location\\": {
    \\"start\\": {
      \\"line\\": 128,
      \\"column\\": 28
    },
    \\"end\\": {
      \\"line\\": 163,
      \\"column\\": 1
    }
  },
  \\"filename\\": \\"<rootDir>/__tests__/lib/bus-code/input/case1.tsx\\"
})(function (_ref3) {
  var className = _ref3.className,
      type = _ref3.type,
      normalImg = _ref3.normalImg,
      normalBg = _ref3.normalBg;

  var _useContextStore3 = (0, _YStore.useContextStore)(_store2[\\"default\\"]),
      state = _useContextStore3.state,
      action = _useContextStore3.action;

  var _useRecommendTheme2 = (0, _useTheme.useRecommendTheme)(),
      theme = _useRecommendTheme2.theme;

  return /*#__PURE__*/_react2[\\"default\\"].createElement(\\"div\\", {
    className: (0, _classnames[\\"default\\"])(_index[\\"default\\"].searchHeader, className, _defineProperty({}, _index[\\"default\\"].searchWithoutRecommend, type !== _accurate.AccurateHeaderType.搜索))
  }, /*#__PURE__*/_react2[\\"default\\"].createElement(\\"div\\", {
    className: _index[\\"default\\"].search
  }, /*#__PURE__*/_react2[\\"default\\"].createElement(\\"div\\", {
    className: _index[\\"default\\"].searchUnion,
    onClick: function onClick() {
      (0, _tea.sendEvent)(_utils.DouxiaoerClickEvent, {
        scene_id: state.scene_id,
        status: state.status,
        name: '缩小按钮'
      });
      action.setDouXiaoerStatus(_douXiaoer.DouXiaoerStatusEnum.mini);
      action.sendChangeToMini();
    }
  }, /*#__PURE__*/_react2[\\"default\\"].createElement(_icon.UnionIcon, null)), /*#__PURE__*/_react2[\\"default\\"].createElement(_auxo.ImgDefault, {
    imgSrc: normalImg ? normalImg : theme.search_png,
    defaultSvg: theme.search_png,
    mask: false,
    className: _index[\\"default\\"].searchIcon,
    draggable: \\"false\\"
  })));
});
exports.SearchHeader = SearchHeader;
var ContainerHeader = (0, _react[\\"default\\"])({
  \\"location\\": {
    \\"start\\": {
      \\"line\\": 165,
      \\"column\\": 0
    },
    \\"end\\": {
      \\"line\\": 171,
      \\"column\\": 1
    }
  },
  \\"filename\\": \\"<rootDir>/__tests__/lib/bus-code/input/case1.tsx\\"
})(function ContainerHeader(_ref4) {
  var type = _ref4.type,
      hasP0 = _ref4.hasP0,
      props = _objectWithoutProperties(_ref4, [\\"type\\", \\"hasP0\\"]);

  var showTodo = (0, _react2.useMemo)(function () {
    return type === _accurate.AccurateHeaderType.待办;
  }, [type]);
  var url = !showTodo ? '' : hasP0 ? _imgs.HEADER_IMG.HIGHEST_P_BG : _imgs.HEADER_IMG.LOWEST_P_BG;
  return /*#__PURE__*/_react2[\\"default\\"].createElement(\\"div\\", {
    className: (0, _classnames[\\"default\\"])(_index[\\"default\\"].headerContainer, _defineProperty({}, _index[\\"default\\"].todoContainer, showTodo)),
    style: !url ? {} : {
      backgroundImage: \\"url(\\".concat(url, \\")\\")
    }
  }, showTodo ? /*#__PURE__*/_react2[\\"default\\"].createElement(TodoHeader, _extends({}, props, {
    normalImg: Boolean(props.todoLength) ? hasP0 ? _imgs.HEADER_IMG.HIGHEST_P : _imgs.HEADER_IMG.LOWEST_P : _imgs.HEADER_IMG.NO_TASK
  })) : /*#__PURE__*/_react2[\\"default\\"].createElement(_react2[\\"default\\"].Fragment, null, /*#__PURE__*/_react2[\\"default\\"].createElement(RecommendHeader, _extends({
    key: 1,
    type: type
  }, props)), /*#__PURE__*/_react2[\\"default\\"].createElement(SearchHeader, _extends({
    key: 2,
    type: type
  }, props))));
});
var _default = ContainerHeader;
exports[\\"default\\"] = _default;"
`;

exports[`demo demo-bus-code: DemoEs6Code-bus-code-case1.tsx 1`] = `
"import _decorate from \\"<rootDir>/__tests__/lib/bus-code/react.js\\";
import React, { useMemo } from 'react';
import c from 'classnames';
import { ImgDefault } from '@ecom/auxo';
import { DouXiaoerStatusEnum, setGlobalHide } from '@ecom/hulk-utils/src/dou-xiaoer';
import { getGlobalStore } from '@ecom/hulk-utils/src/store';
import { sendEvent } from '@ecom/hulk-utils/src/tea';
import { useContextStore } from '@ecom/mortise/YStore';
import { UnionIcon } from '../../../static/icon';
import DouXiaoerStore from '../../../store';
import { AccurateHeaderType } from '../../../type/accurate';
import { DouxiaoerClickEvent } from '../../../utils';
import { useRecommendTheme } from '../../../utils/hooks/useTheme';
import { HEADER_IMG } from '../../../utils/imgs';
import { isSupportedWebp } from '../../../utils/webp';
import s from './index.scss';
export const TodoHeader = _decorate({
  \\"location\\": {
    \\"start\\": {
      \\"line\\": 26,
      \\"column\\": 26
    },
    \\"end\\": {
      \\"line\\": 67,
      \\"column\\": 1
    }
  },
  \\"filename\\": \\"<rootDir>/__tests__/lib/bus-code/input/case1.tsx\\"
})(({
  className,
  todoLength,
  normalImg
}) => {
  const {
    action
  } = useContextStore(DouXiaoerStore);
  return <div className={c(s.todoHeader, className)}>
      <div className={s.todo}>
        <div className={s.infoWrapper}>
          <ImgDefault imgSrc={normalImg ? normalImg : HEADER_IMG.HIGHEST_P} defaultSvg={HEADER_IMG.LOWEST_P} mask={false} className={s.infoImg} draggable={'false'} />
          {Boolean(todoLength) ? <div className={s.info}>
              <div className={s.title}>有 {todoLength} 个事项正在影响您的收益</div>
              <div className={s.subTitle}>请及时关注，按指导完成操作</div>
            </div> : <div className={s.nonTaskInfo}>很棒～当前没有需要处理的任务</div>}
        </div>

        <div className={s.miniIcon} onClick={() => {
        if (getGlobalStore().getData?.()?.DouXiaoerStore?.isOnceInject) {
          // 如果页面中存在嵌入式，需要直接隐藏
          setGlobalHide(true);
        }

        action.sendChangeToMini();
        action.setDouXiaoerStatus(DouXiaoerStatusEnum.mini);
      }}>
          <UnionIcon />
        </div>
      </div>
    </div>;
});
export const RecommendHeader = _decorate({
  \\"location\\": {
    \\"start\\": {
      \\"line\\": 74,
      \\"column\\": 31
    },
    \\"end\\": {
      \\"line\\": 121,
      \\"column\\": 1
    }
  },
  \\"filename\\": \\"<rootDir>/__tests__/lib/bus-code/input/case1.tsx\\"
})(({
  className,
  normalImg,
  normalBg,
  type
}) => {
  const {
    state,
    action
  } = useContextStore(DouXiaoerStore);
  const {
    content = {},
    themeInfo
  } = state;
  const {
    head_info = {}
  } = content;
  const {
    theme
  } = useRecommendTheme();
  return <div className={c(s.recommendHeader, className, {
    [s.recommendInSearch]: type === AccurateHeaderType.搜索
  })} // style={{ backgroundImage: \`url(\${normalBg ? normalBg : HEADER_IMG.HEADER_BG})\` }}>
  style={{
    backgroundImage: \`url(\${normalBg ? normalBg : theme.img_header})\`
  }}>
      <div className={s.recommend} />
      <div className={s.recommend}>
        <div className={s.recommendContent}>
          <ImgDefault imgSrc={normalImg ? normalImg : isSupportedWebp() ? theme.src : theme.defaultSrc} defaultSvg={theme.defaultSrc} mask={false} className={s.nicon} draggable=\\"false\\" />
          <div className={s.headerTitle}>
            <div className={s.title}>{head_info?.title}</div>
            {
            /* {Boolean(head_info?.location_text) && <div className={s.subTitle}>{head_info?.location_text}</div>} */
          }
          </div>
        </div>
        <div className={s.union} onClick={() => {
        sendEvent(DouxiaoerClickEvent, {
          scene_id: state.scene_id,
          status: state.status,
          name: '缩小按钮'
        });
        action.setDouXiaoerStatus(DouXiaoerStatusEnum.mini);
        action.sendChangeToMini();
      }}>
          <UnionIcon />
        </div>
      </div>
    </div>;
});
export const SearchHeader = _decorate({
  \\"location\\": {
    \\"start\\": {
      \\"line\\": 128,
      \\"column\\": 28
    },
    \\"end\\": {
      \\"line\\": 163,
      \\"column\\": 1
    }
  },
  \\"filename\\": \\"<rootDir>/__tests__/lib/bus-code/input/case1.tsx\\"
})(({
  className,
  type,
  normalImg,
  normalBg
}) => {
  const {
    state,
    action
  } = useContextStore(DouXiaoerStore);
  const {
    theme
  } = useRecommendTheme();
  return <div className={c(s.searchHeader, className, {
    [s.searchWithoutRecommend]: type !== AccurateHeaderType.搜索
  })}>
      <div className={s.search}>
        <div className={s.searchUnion} onClick={() => {
        sendEvent(DouxiaoerClickEvent, {
          scene_id: state.scene_id,
          status: state.status,
          name: '缩小按钮'
        });
        action.setDouXiaoerStatus(DouXiaoerStatusEnum.mini);
        action.sendChangeToMini();
      }}>
          <UnionIcon />
        </div>
        <ImgDefault imgSrc={normalImg ? normalImg : theme.search_png} defaultSvg={theme.search_png} mask={false} className={s.searchIcon} draggable=\\"false\\" />
      </div>
    </div>;
});

const ContainerHeader = _decorate({
  \\"location\\": {
    \\"start\\": {
      \\"line\\": 165,
      \\"column\\": 0
    },
    \\"end\\": {
      \\"line\\": 171,
      \\"column\\": 1
    }
  },
  \\"filename\\": \\"<rootDir>/__tests__/lib/bus-code/input/case1.tsx\\"
})(function ContainerHeader({
  type,
  hasP0,
  ...props
}) {
  const showTodo = useMemo(() => type === AccurateHeaderType.待办, [type]);
  const url = !showTodo ? '' : hasP0 ? HEADER_IMG.HIGHEST_P_BG : HEADER_IMG.LOWEST_P_BG;
  return <div className={c(s.headerContainer, {
    [s.todoContainer]: showTodo // [s.highestPWrapper]: showTodo && hasP0,
    // [s.lowestPWrapper]: showTodo && !hasP0,

  })} style={!url ? {} : {
    backgroundImage: \`url(\${url})\`
  }}>
      {showTodo ? <TodoHeader {...props} normalImg={Boolean(props.todoLength) ? hasP0 ? HEADER_IMG.HIGHEST_P : HEADER_IMG.LOWEST_P : HEADER_IMG.NO_TASK} /> : <>
          <RecommendHeader key={1} type={type} {...props} />
          <SearchHeader key={2} type={type} {...props} />
        </>}
    </div>;
});

export default ContainerHeader;"
`;

exports[`demo demo-inject: DemoCode-inject-button.js 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Test = Test;
exports[\\"default\\"] = exports.ButtonExport = void 0;

var _jsx = _interopRequireDefault(require(\\"<rootDir>/__tests__/lib/inject/jsx.js\\"));

var _react = _interopRequireDefault(require(\\"<rootDir>/__tests__/lib/inject/react.js\\"));

var React = _interopRequireWildcard(require(\\"react\\"));

var _dec, _class;

function _getRequireWildcardCache() { if (typeof WeakMap !== \\"function\\") return null; var cache = new WeakMap(); _getRequireWildcardCache = function _getRequireWildcardCache() { return cache; }; return cache; }

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } if (obj === null || _typeof(obj) !== \\"object\\" && typeof obj !== \\"function\\") { return { \\"default\\": obj }; } var cache = _getRequireWildcardCache(); if (cache && cache.has(obj)) { return cache.get(obj); } var newObj = {}; var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor; for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null; if (desc && (desc.get || desc.set)) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } newObj[\\"default\\"] = obj; if (cache) { cache.set(obj, newObj); } return newObj; }

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { \\"default\\": obj }; }

function _typeof(obj) { \\"@babel/helpers - typeof\\"; if (typeof Symbol === \\"function\\" && typeof Symbol.iterator === \\"symbol\\") { _typeof = function _typeof(obj) { return typeof obj; }; } else { _typeof = function _typeof(obj) { return obj && typeof Symbol === \\"function\\" && obj.constructor === Symbol && obj !== Symbol.prototype ? \\"symbol\\" : typeof obj; }; } return _typeof(obj); }

function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError(\\"Cannot call a class as a function\\"); } }

function _defineProperties(target, props) { for (var i = 0; i < props.length; i++) { var descriptor = props[i]; descriptor.enumerable = descriptor.enumerable || false; descriptor.configurable = true; if (\\"value\\" in descriptor) descriptor.writable = true; Object.defineProperty(target, descriptor.key, descriptor); } }

function _createClass(Constructor, protoProps, staticProps) { if (protoProps) _defineProperties(Constructor.prototype, protoProps); if (staticProps) _defineProperties(Constructor, staticProps); return Constructor; }

function _inherits(subClass, superClass) { if (typeof superClass !== \\"function\\" && superClass !== null) { throw new TypeError(\\"Super expression must either be null or a function\\"); } subClass.prototype = Object.create(superClass && superClass.prototype, { constructor: { value: subClass, writable: true, configurable: true } }); if (superClass) _setPrototypeOf(subClass, superClass); }

function _setPrototypeOf(o, p) { _setPrototypeOf = Object.setPrototypeOf || function _setPrototypeOf(o, p) { o.__proto__ = p; return o; }; return _setPrototypeOf(o, p); }

function _createSuper(Derived) { var hasNativeReflectConstruct = _isNativeReflectConstruct(); return function _createSuperInternal() { var Super = _getPrototypeOf(Derived), result; if (hasNativeReflectConstruct) { var NewTarget = _getPrototypeOf(this).constructor; result = Reflect.construct(Super, arguments, NewTarget); } else { result = Super.apply(this, arguments); } return _possibleConstructorReturn(this, result); }; }

function _possibleConstructorReturn(self, call) { if (call && (_typeof(call) === \\"object\\" || typeof call === \\"function\\")) { return call; } return _assertThisInitialized(self); }

function _assertThisInitialized(self) { if (self === void 0) { throw new ReferenceError(\\"this hasn't been initialised - super() hasn't been called\\"); } return self; }

function _isNativeReflectConstruct() { if (typeof Reflect === \\"undefined\\" || !Reflect.construct) return false; if (Reflect.construct.sham) return false; if (typeof Proxy === \\"function\\") return true; try { Date.prototype.toString.call(Reflect.construct(Date, [], function () {})); return true; } catch (e) { return false; } }

function _getPrototypeOf(o) { _getPrototypeOf = Object.setPrototypeOf ? Object.getPrototypeOf : function _getPrototypeOf(o) { return o.__proto__ || Object.getPrototypeOf(o); }; return _getPrototypeOf(o); }

var Button = function Button() {
  return /*#__PURE__*/React.createElement(\\"div\\", null);
};

var ButtonExport = function ButtonExport() {
  return (0, _jsx[\\"default\\"])(\\"input/button.js\\")( /*#__PURE__*/React.createElement(\\"div\\", null));
};

exports.ButtonExport = ButtonExport;
var ButtonExportDefault = (_dec = (0, _react[\\"default\\"])(\\"input/button.js\\"), _dec(_class = /*#__PURE__*/function (_React$Component) {
  _inherits(ButtonExportDefault, _React$Component);

  var _super = _createSuper(ButtonExportDefault);

  function ButtonExportDefault() {
    _classCallCheck(this, ButtonExportDefault);

    return _super.apply(this, arguments);
  }

  _createClass(ButtonExportDefault, [{
    key: \\"render\\",
    value: function render() {
      return /*#__PURE__*/React.createElement(\\"div\\", null);
    }
  }]);

  return ButtonExportDefault;
}(React.Component)) || _class);
exports[\\"default\\"] = ButtonExportDefault;

/* decorate-disable */
function Test() {
  return /*#__PURE__*/React.createElement(\\"div\\", null, /*#__PURE__*/React.createElement(Button, null), /*#__PURE__*/React.createElement(ButtonExport, null), /*#__PURE__*/React.createElement(ButtonExportDefault, null));
}"
`;

exports[`demo demo-inject: DemoEs6Code-inject-button.js 1`] = `
"import _decorate2 from \\"<rootDir>/__tests__/lib/inject/jsx.js\\";
import _decorate from \\"<rootDir>/__tests__/lib/inject/react.js\\";
import * as React from 'react';

const Button = () => <div></div>;

export const ButtonExport = () => _decorate2(\\"input/button.js\\")(<div></div>);
export default @_decorate(\\"input/button.js\\")
class ButtonExportDefault extends React.Component {
  render() {
    return <div></div>;
  }

}
/* decorate-disable */

export function Test() {
  return <div>
      <Button />
      <ButtonExport />
      <ButtonExportDefault />
    </div>;
}"
`;

exports[`demo demo-inject: DemoOutput-inject-button.js 1`] = `
<div>
  <div />
  <div
    data-id="input/button.js"
  />
  <div
    data-id="input/button.js"
  />
</div>
`;

exports[`demo demo-mobx: DemoCode-mobx-button.js 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Test = Test;
exports[\\"default\\"] = exports.ButtonExport = void 0;

var _decorate2 = _interopRequireDefault(require(\\"<rootDir>/mobx/decorate.js\\"));

var React = _interopRequireWildcard(require(\\"react\\"));

var _dec, _class;

function _getRequireWildcardCache() { if (typeof WeakMap !== \\"function\\") return null; var cache = new WeakMap(); _getRequireWildcardCache = function _getRequireWildcardCache() { return cache; }; return cache; }

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } if (obj === null || _typeof(obj) !== \\"object\\" && typeof obj !== \\"function\\") { return { \\"default\\": obj }; } var cache = _getRequireWildcardCache(); if (cache && cache.has(obj)) { return cache.get(obj); } var newObj = {}; var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor; for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null; if (desc && (desc.get || desc.set)) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } newObj[\\"default\\"] = obj; if (cache) { cache.set(obj, newObj); } return newObj; }

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { \\"default\\": obj }; }

function _typeof(obj) { \\"@babel/helpers - typeof\\"; if (typeof Symbol === \\"function\\" && typeof Symbol.iterator === \\"symbol\\") { _typeof = function _typeof(obj) { return typeof obj; }; } else { _typeof = function _typeof(obj) { return obj && typeof Symbol === \\"function\\" && obj.constructor === Symbol && obj !== Symbol.prototype ? \\"symbol\\" : typeof obj; }; } return _typeof(obj); }

function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError(\\"Cannot call a class as a function\\"); } }

function _defineProperties(target, props) { for (var i = 0; i < props.length; i++) { var descriptor = props[i]; descriptor.enumerable = descriptor.enumerable || false; descriptor.configurable = true; if (\\"value\\" in descriptor) descriptor.writable = true; Object.defineProperty(target, descriptor.key, descriptor); } }

function _createClass(Constructor, protoProps, staticProps) { if (protoProps) _defineProperties(Constructor.prototype, protoProps); if (staticProps) _defineProperties(Constructor, staticProps); return Constructor; }

function _inherits(subClass, superClass) { if (typeof superClass !== \\"function\\" && superClass !== null) { throw new TypeError(\\"Super expression must either be null or a function\\"); } subClass.prototype = Object.create(superClass && superClass.prototype, { constructor: { value: subClass, writable: true, configurable: true } }); if (superClass) _setPrototypeOf(subClass, superClass); }

function _setPrototypeOf(o, p) { _setPrototypeOf = Object.setPrototypeOf || function _setPrototypeOf(o, p) { o.__proto__ = p; return o; }; return _setPrototypeOf(o, p); }

function _createSuper(Derived) { var hasNativeReflectConstruct = _isNativeReflectConstruct(); return function _createSuperInternal() { var Super = _getPrototypeOf(Derived), result; if (hasNativeReflectConstruct) { var NewTarget = _getPrototypeOf(this).constructor; result = Reflect.construct(Super, arguments, NewTarget); } else { result = Super.apply(this, arguments); } return _possibleConstructorReturn(this, result); }; }

function _possibleConstructorReturn(self, call) { if (call && (_typeof(call) === \\"object\\" || typeof call === \\"function\\")) { return call; } return _assertThisInitialized(self); }

function _assertThisInitialized(self) { if (self === void 0) { throw new ReferenceError(\\"this hasn't been initialised - super() hasn't been called\\"); } return self; }

function _isNativeReflectConstruct() { if (typeof Reflect === \\"undefined\\" || !Reflect.construct) return false; if (Reflect.construct.sham) return false; if (typeof Proxy === \\"function\\") return true; try { Date.prototype.toString.call(Reflect.construct(Date, [], function () {})); return true; } catch (e) { return false; } }

function _getPrototypeOf(o) { _getPrototypeOf = Object.setPrototypeOf ? Object.getPrototypeOf : function _getPrototypeOf(o) { return o.__proto__ || Object.getPrototypeOf(o); }; return _getPrototypeOf(o); }

var Button = (0, _decorate2[\\"default\\"])(null)(function () {
  return /*#__PURE__*/React.createElement(\\"div\\", null);
});
var ButtonExport = (0, _decorate2[\\"default\\"])(null)(function () {
  return /*#__PURE__*/React.createElement(\\"div\\", null);
});
exports.ButtonExport = ButtonExport;
var ButtonExportDefault = (_dec = (0, _decorate2[\\"default\\"])(null), _dec(_class = /*#__PURE__*/function (_React$Component) {
  _inherits(ButtonExportDefault, _React$Component);

  var _super = _createSuper(ButtonExportDefault);

  function ButtonExportDefault() {
    _classCallCheck(this, ButtonExportDefault);

    return _super.apply(this, arguments);
  }

  _createClass(ButtonExportDefault, [{
    key: \\"render\\",
    value: function render() {
      var renderC = function renderC() {
        return /*#__PURE__*/React.createElement(\\"div\\", null);
      };

      return /*#__PURE__*/React.createElement(\\"div\\", null, renderC());
    }
  }]);

  return ButtonExportDefault;
}(React.Component)) || _class);
exports[\\"default\\"] = ButtonExportDefault;

/* mobx-observer-disable */
function Test() {
  return /*#__PURE__*/React.createElement(\\"div\\", null, /*#__PURE__*/React.createElement(Button, null), /*#__PURE__*/React.createElement(ButtonExport, null), /*#__PURE__*/React.createElement(ButtonExportDefault, null));
}"
`;

exports[`demo demo-mobx: DemoEs6Code-mobx-button.js 1`] = `
"import _decorate from \\"<rootDir>/mobx/decorate.js\\";
import * as React from 'react';

const Button = _decorate(null)(() => <div></div>);

export const ButtonExport = _decorate(null)(() => <div></div>);
export default @_decorate(null)
class ButtonExportDefault extends React.Component {
  render() {
    const renderC = () => <div></div>;

    return <div>{renderC()}</div>;
  }

}
/* mobx-observer-disable */

export function Test() {
  return <div>
      <Button />
      <ButtonExport />
      <ButtonExportDefault />
    </div>;
}"
`;

exports[`demo demo-mobx: DemoOutput-mobx-button.js 1`] = `
<div>
  <div />
  <div />
  <div>
    <div />
  </div>
</div>
`;

exports[`demo demo-mobx-like: DemoCode-mobx-like-button.js 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Test = Test;
exports[\\"default\\"] = exports.ButtonExport = void 0;

var _react = _interopRequireDefault(require(\\"<rootDir>/__tests__/lib/mobx-like/react.js\\"));

var React = _interopRequireWildcard(require(\\"react\\"));

var _dec, _class;

function _getRequireWildcardCache() { if (typeof WeakMap !== \\"function\\") return null; var cache = new WeakMap(); _getRequireWildcardCache = function _getRequireWildcardCache() { return cache; }; return cache; }

function _interopRequireWildcard(obj) { if (obj && obj.__esModule) { return obj; } if (obj === null || _typeof(obj) !== \\"object\\" && typeof obj !== \\"function\\") { return { \\"default\\": obj }; } var cache = _getRequireWildcardCache(); if (cache && cache.has(obj)) { return cache.get(obj); } var newObj = {}; var hasPropertyDescriptor = Object.defineProperty && Object.getOwnPropertyDescriptor; for (var key in obj) { if (Object.prototype.hasOwnProperty.call(obj, key)) { var desc = hasPropertyDescriptor ? Object.getOwnPropertyDescriptor(obj, key) : null; if (desc && (desc.get || desc.set)) { Object.defineProperty(newObj, key, desc); } else { newObj[key] = obj[key]; } } } newObj[\\"default\\"] = obj; if (cache) { cache.set(obj, newObj); } return newObj; }

function _interopRequireDefault(obj) { return obj && obj.__esModule ? obj : { \\"default\\": obj }; }

function _typeof(obj) { \\"@babel/helpers - typeof\\"; if (typeof Symbol === \\"function\\" && typeof Symbol.iterator === \\"symbol\\") { _typeof = function _typeof(obj) { return typeof obj; }; } else { _typeof = function _typeof(obj) { return obj && typeof Symbol === \\"function\\" && obj.constructor === Symbol && obj !== Symbol.prototype ? \\"symbol\\" : typeof obj; }; } return _typeof(obj); }

function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError(\\"Cannot call a class as a function\\"); } }

function _defineProperties(target, props) { for (var i = 0; i < props.length; i++) { var descriptor = props[i]; descriptor.enumerable = descriptor.enumerable || false; descriptor.configurable = true; if (\\"value\\" in descriptor) descriptor.writable = true; Object.defineProperty(target, descriptor.key, descriptor); } }

function _createClass(Constructor, protoProps, staticProps) { if (protoProps) _defineProperties(Constructor.prototype, protoProps); if (staticProps) _defineProperties(Constructor, staticProps); return Constructor; }

function _inherits(subClass, superClass) { if (typeof superClass !== \\"function\\" && superClass !== null) { throw new TypeError(\\"Super expression must either be null or a function\\"); } subClass.prototype = Object.create(superClass && superClass.prototype, { constructor: { value: subClass, writable: true, configurable: true } }); if (superClass) _setPrototypeOf(subClass, superClass); }

function _setPrototypeOf(o, p) { _setPrototypeOf = Object.setPrototypeOf || function _setPrototypeOf(o, p) { o.__proto__ = p; return o; }; return _setPrototypeOf(o, p); }

function _createSuper(Derived) { var hasNativeReflectConstruct = _isNativeReflectConstruct(); return function _createSuperInternal() { var Super = _getPrototypeOf(Derived), result; if (hasNativeReflectConstruct) { var NewTarget = _getPrototypeOf(this).constructor; result = Reflect.construct(Super, arguments, NewTarget); } else { result = Super.apply(this, arguments); } return _possibleConstructorReturn(this, result); }; }

function _possibleConstructorReturn(self, call) { if (call && (_typeof(call) === \\"object\\" || typeof call === \\"function\\")) { return call; } return _assertThisInitialized(self); }

function _assertThisInitialized(self) { if (self === void 0) { throw new ReferenceError(\\"this hasn't been initialised - super() hasn't been called\\"); } return self; }

function _isNativeReflectConstruct() { if (typeof Reflect === \\"undefined\\" || !Reflect.construct) return false; if (Reflect.construct.sham) return false; if (typeof Proxy === \\"function\\") return true; try { Date.prototype.toString.call(Reflect.construct(Date, [], function () {})); return true; } catch (e) { return false; } }

function _getPrototypeOf(o) { _getPrototypeOf = Object.setPrototypeOf ? Object.getPrototypeOf : function _getPrototypeOf(o) { return o.__proto__ || Object.getPrototypeOf(o); }; return _getPrototypeOf(o); }

var Button = function Button() {
  return /*#__PURE__*/React.createElement(\\"div\\", null);
};

var ButtonExport = (0, _react[\\"default\\"])(\\"input/button.js\\")(function () {
  return /*#__PURE__*/React.createElement(\\"div\\", null);
});
exports.ButtonExport = ButtonExport;
var ButtonExportDefault = (_dec = (0, _react[\\"default\\"])(\\"input/button.js\\"), _dec(_class = /*#__PURE__*/function (_React$Component) {
  _inherits(ButtonExportDefault, _React$Component);

  var _super = _createSuper(ButtonExportDefault);

  function ButtonExportDefault() {
    _classCallCheck(this, ButtonExportDefault);

    return _super.apply(this, arguments);
  }

  _createClass(ButtonExportDefault, [{
    key: \\"render\\",
    value: function render() {
      var renderC = function renderC() {
        return /*#__PURE__*/React.createElement(\\"div\\", null);
      };

      return /*#__PURE__*/React.createElement(\\"div\\", null, renderC());
    }
  }]);

  return ButtonExportDefault;
}(React.Component)) || _class);
exports[\\"default\\"] = ButtonExportDefault;

/* mobx-decorate-disable */
function Test() {
  return /*#__PURE__*/React.createElement(\\"div\\", null, /*#__PURE__*/React.createElement(Button, null), /*#__PURE__*/React.createElement(ButtonExport, null), /*#__PURE__*/React.createElement(ButtonExportDefault, null));
}"
`;

exports[`demo demo-mobx-like: DemoEs6Code-mobx-like-button.js 1`] = `
"import _decorate from \\"<rootDir>/__tests__/lib/mobx-like/react.js\\";
import * as React from 'react';

const Button = () => <div></div>;

export const ButtonExport = _decorate(\\"input/button.js\\")(() => <div></div>);
export default @_decorate(\\"input/button.js\\")
class ButtonExportDefault extends React.Component {
  render() {
    const renderC = () => <div></div>;

    return <div>{renderC()}</div>;
  }

}
/* mobx-decorate-disable */

export function Test() {
  return <div>
      <Button />
      <ButtonExport />
      <ButtonExportDefault />
    </div>;
}"
`;

exports[`demo demo-mobx-like: DemoOutput-mobx-like-button.js 1`] = `
<div>
  <div />
  <div />
  <div
    mobx-data-id="input/button.js"
  >
    <div />
  </div>
</div>
`;
